# 2025-simpleKafka

./: CMakeLists.txt  README.md
docs/: presentation.pdf:Zone.Identifier
src/: broker.cpp  broker.hpp  broker_main.cpp  cluster_metadata.cpp  cluster_metadata.hpp  consumer.cpp  consumer.hpp  consumer_main.cpp  controller.cpp  controller.hpp  controller_main.cpp  network_messages.cpp  network_messages.hpp  producer.cpp  producer.hpp  producer_interactive_main.cpp  producer_main.cpp  records.cpp  records.hpp
src/eval/: consumer_eval.cpp  producer_eval.cpp
src/sockets/: ClientSocket.cpp  ClientSocket.hpp  ClientStub.cpp  ClientStub.hpp  ServerSocket.cpp  ServerSocket.hpp  ServerStub.cpp  ServerStub.hpp  Socket.cpp  Socket.hpp
src/util/: debug_stream.cpp  debug_stream.hpp  option.hpp  thread_safe_queue.hpp
